tests/semantica/invalid/metodos/test12.ctds
program 
    {
		integer x = 0;
		
		integer foo(){
			x = 0;
		}

		void main(){
			foo();
		}
    }